modules/azure/web-server/main.tf
resource "azurerm_network_security_group" "nsg_web" {
  name                = "${var.project}-web-nsg01"
  location            = var.location
  resource_group_name = var.resource_group_name

  security_rule {
    name                       = "RDP"
    priority                   = 1000
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "web"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  tags = var.tags
}

resource "azurerm_network_interface" "web_private_nic01" {
  name                = "${var.project}-web-nic01"
  location            = var.location
  resource_group_name = var.resource_group_name

  ip_configuration {
    name                          = "${var.project}-web-nic01"
    subnet_id                     = var.subnet_id
    private_ip_address_allocation = "Dynamic"
  }
  tags = var.tags
}

resource "azurerm_network_interface_security_group_association" "nsg_nic_assoc01" {
  network_interface_id      = azurerm_network_interface.web_private_nic01.id
  network_security_group_id = azurerm_network_security_group.nsg_web.id
}

resource "azurerm_windows_virtual_machine" "web_server01" {
  name                  = "${var.project}-web01"
  admin_username        = "testuser"
  admin_password        = "p@ssw0rd123##"
  location              = var.location
  resource_group_name   = var.resource_group_name
  network_interface_ids = [azurerm_network_interface.web_private_nic01.id]
  size                  = "Standard_DS1_v2"

  os_disk {
    name                 = "privateOsDisk"
    caching              = "ReadWrite"
    storage_account_type = "Premium_LRS"
  }

  source_image_reference {
    publisher = "MicrosoftWindowsServer"
    offer     = "WindowsServer"
    sku       = "2022-datacenter-azure-edition"
    version   = "latest"
  }
  tags = var.tags
}

resource "azurerm_virtual_machine_extension" "private_web_server_install" {
  name                       = "${var.project}-private-wsi"
  virtual_machine_id         = azurerm_windows_virtual_machine.web_server01.id
  publisher                  = "Microsoft.Compute"
  type                       = "CustomScriptExtension"
  type_handler_version       = "1.8"
  auto_upgrade_minor_version = true

  settings = <<SETTINGS
    {
      "commandToExecute": "powershell -ExecutionPolicy Unrestricted Install-WindowsFeature -Name Web-Server -IncludeAllSubFeature -IncludeManagementTools"
    }
  SETTINGS
}
